--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -15,14 +15,13 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="72dp"
+        <ImageView android:src="@drawable/logo"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:text="@string/app_name"
-            android:gravity="center"
-            android:textSize="24sp" />
+            android:layout_gravity="center_horizontal" />
+
 
         <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
